--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 RewriteEngine On
-RewriteRule (.*) public/$1
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteRule ^ index.php
